@@ -1,3 +1,7 @@
+22. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
+	- save last dir on open catalog
+	- use qt4 filedialogs
+
 21. Jan 2011 Christoph Thielecke <crissi99@gmx.de>
 	- detect uncompressed file size added
 	- test for enough memory at catalog reading added
